[tool.poetry]
name = "swarm"
version = "0.1.0"
description = ""
authors = ["JayGhiya <ghiya6548@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
jupyter = "^1.0.0"
ipykernel = "^6.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
